Making nav smaller to avoid overflow

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ header {
 nav {
   text-align: center;
   font-family: var(--secondary-font);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   margin-bottom: -3.5rem;
 }
 
